2013-02-07  Manuel Koller   <mkoller@ispm.unibe.ch>

	* R/lmrob.R (lmrob): compatibility to lm:
	'assign': labels of terms used for fitting.

	* lmrob.R (summary.lmrob): compatibility to summary.lm for:
	'df': degrees of freedom, a 3-vector (p, n-p, p*), the last being
	the number of non-aliased coefficients (used to be just (n-p)).
	'aliased': named logical vector showing if the original
	coefficients are aliased (was not returned before).

2012-05-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (.vcov.avar1): fix typo in "posdefify"

2012-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (.vcov.avar1): "posdefify" FIXME (negative eigen values)

2012-02-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-1-1, released to CRAN on 2012-03-02

2012-02-24  Manuel Koller  <koller@stat.math.ethz.ch>

	* R/lmrob.R (lmrob): added init argument: string, function or list.
	* R/lmrob.MM.R (lmrob.fit): added init argument.

	* man/lmrob.Rd: Added documentation about init argument.
	* man/lmrob.fit.Rd: see above.

2012-02-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (print.summary.nlrob): use full call instead of just
	formula. --> shows non-default psi()

2012-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (nlrob): now use nls(...., weights = *, ..), no longer
	need hack "put everything to the RHS".

2011-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (nlrob): for zero weights 'w', the residuals
	accidentally where NaN.

2011-12-12  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-1
	* src/mc.c (mc_C_d): fixed bug in iteration; see svn log -r 272 & 274

2011-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjbox.R (adjboxStats): fix the sign-error thinko for the case mc < 0.
	* man/adjboxStats.Rd: document; test the reflection invariance now.

2011-12-08  Martin Maechler  <maechler@stat.math.ethz.ch>
