@@ -25,26 +25,41 @@ Type 'q()' to quit R.
 > ## S
 > set.seed(0)
 > summary(m0 <- lmrob(stack.loss ~ ., data = stackloss, method = "S"))
-               Length Class      Mode   
-coefficients    4     -none-     numeric
-scale           1     -none-     numeric
-k.iter          1     -none-     numeric
-converged       1     -none-     logical
-fitted.values  21     -none-     numeric
-residuals      21     -none-     numeric
-weights        21     -none-     numeric
-control        26     -none-     list   
-qr              4     qr         list   
-rank            1     -none-     numeric
-cov            16     -none-     numeric
-df.residual     1     -none-     numeric
-degree.freedom  1     -none-     numeric
-xlevels         0     -none-     list   
-call            4     -none-     call   
-terms           3     terms      call   
-assign          4     -none-     numeric
-model           4     data.frame list   
-x              84     -none-     numeric
+
+Call:
+lmrob(formula = stack.loss ~ ., data = stackloss, method = "S")
+
+Weighted Residuals:
+     Min       1Q   Median       3Q      Max 
+-9.46226 -0.82076  0.02249  0.80806  8.31829 
+
+Coefficients:
+             Estimate Std. Error t value Pr(>|t|)    
+(Intercept) -36.92542    5.41708  -6.816  3.0e-06 ***
+Air.Flow      0.84957    0.07892  10.765  5.2e-09 ***
+Water.Temp    0.43047    0.19507   2.207   0.0414 *  
+Acid.Conc.   -0.07354    0.07216  -1.019   0.3224    
+---
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 
+
+Robust residual standard error: 1.912 
+Convergence in IRWLS iterations
+
+Robustness weights: 
+ 5 observations c(1,3,4,13,21) are outliers with |weight| = 0 ( < 0.0048); 
+ one weight is ~= 1. The remaining 15 ones are summarized as
+   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+ 0.4126  0.7595  0.8726  0.8270  0.9718  0.9986 
+Algorithmic parameters: 
+tuning.chi         bb tuning.psi refine.tol    rel.tol  solve.tol 
+ 1.5476400  0.5000000  4.6850610  0.0000001  0.0000001  0.0000001 
+     nResample         max.it       best.r.s       k.fast.s          k.max 
+           500             50              2              1            200 
+   maxit.scale      trace.lev            mts     compute.rd fast.s.large.n 
+           200              0           1000              0           2000 
+          psi   subsampling        method           cov 
+   "bisquare" "nonsingular"           "S"     ".vcov.w" 
+seed : int(0) 
 Warning message:
 In lf.cov(init, x) :
   :.vcov.w: ignoring cov.resid == final since est != final
